--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
 
 <p>----------------</p>
 
-<p><a href="%202023 Revision (9_12_2023 10_40_55 PM).html" target="_blank">REVISION CLASS AUGUST</a></p><br>
+<p><a href="202023 Revision (9_12_2023 10_40_55 PM).html" target="_blank">REVISION CLASS AUGUST</a></p><br>
 <p><a href="2023%20Revision (9_12_2023 10_42_27 PM).html" target="_blank">PAPER CLASS - AUGUST</a></p><br>
 <p><a href="2023%20Paper Class (9_12_2023 10_44_01 PM).html" target="_blank">PAPER CLASS JULY</a></p><br>
