--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 
 
 <p>----------------</p>
-
-<p><a href="2023%20Revision%20(9_12_2023%2010_40_55%20PM).html" target="_blank">REVISION CLASS AUGUST</a></p>
 <p><a href="2023%20Revision (9_12_2023 10_42_27 PM).html" target="_blank">REVISION CLASS JULY</a></p>
 <p><a href="2023%20Paper Class (9_12_2023 10_44_01 PM).html" target="_blank">PAPER CLASS JULY</a></p>
+<p>----------------</p>
+<p><a href="2023%20Revision%20(9_12_2023%2010_40_55%20PM).html" target="_blank">REVISION CLASS AUGUST</a></p>
+<p><a href="2023%20Paper%20Class%20(9_12_2023%2011_00_33%20PM).html" target="_blank">PAPER CLASS - AUGUST</a></p>
+
+
